samples/_failures_safe/1761190948_e51912_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5b98660.c:162:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 | int main
      | ^~~
